--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="Refresh" content="0; url='https://github.com/TrionesType'" />
+  <meta http-equiv="Refresh" content="0; url='https://www.jaderipple.com/services/'" />
   <title>Redirecting...</title>
 </head>
 <body>
